--- a/Projekt client side/src/index.html
+++ b/Projekt client side/src/index.html
@@ -60,17 +60,17 @@
                 <button class="btn btn-primary center mx-2 w-25">Hledat</button>
               </form>
             </div>
-            <div class="d-flex justify-content-between my-4">
-              <button class="btn btn-secondary center mx-2 w-25">Doplňky pro psy</button>
-              <button class="btn btn-secondary center mx-2 w-25">Granule</button>
-              <button class="btn btn-secondary center mx-2 w-25">Konzervy/kapsičky</button>
-              <button class="btn btn-secondary center mx-2 w-25">Pamlsky</button>
-              <button class="btn btn-secondary center mx-2 w-25">Vitamíny a doplňky stravy</button>
+            <div class="d-flex justify-content-center my-2 gap-2">
+              <button class="btn btn-secondary center w-25">Doplňky pro psy</button>
+              <button class="btn btn-secondary center w-25">Granule</button>
+              <button class="btn btn-secondary center w-25">Konzervy/kapsičky</button>
+              <button class="btn btn-secondary center w-25">Pamlsky</button>
+              <button class="btn btn-secondary center w-25">Vitamíny a doplňky stravy</button>
             </div>
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
               <div class="col">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm align-items-center">
                   <img src="Images/Malypes.jpeg" alt="BALENÍ 12KG – PRO MALÉ PSY, JEHNĚČÍ S RÝŽÍ" style="width: 15rem; height: 25rem;">
                   <div class="card-body">
 
@@ -104,7 +104,7 @@
               </div>
 
               <div class="col">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm align-items-center">
                   <img src="Images/Velkypes.png" alt="BALENÍ 12KG – PRO VELKÉ PSY, JEHNĚČÍ S RÝŽÍ" style="width: 15rem; height: 25rem;">
                   <div class="card-body">
                     <p class="card-text">BALENÍ 12KG – PRO VELKÉ PSY, JEHNĚČÍ S RÝŽÍ</p>
@@ -120,7 +120,7 @@
               </div>
 
               <div class="col">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm align-items-center">
                   <img src="Images/G1.webp" alt="BALENÍ 12KG – PRO PSY S VELKOU SPOTŘEBOU ENERGIE, KACHNÍ MASO A RÝŽE" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
@@ -137,7 +137,7 @@
               </div>
 
               <div class="col">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm align-items-center">
                   <img src="Images/Vystavni.jpeg" alt="BALENÍ 12KG – PRO VÝSTAVNÍ PSY, RYBÍ MASO" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
@@ -154,7 +154,7 @@
               </div>
 
                 <div class="col">
-                  <div class="card shadow-sm">
+                  <div class="card shadow-sm align-items-center">
                     <img src="Images/K5.jpg" alt="BALENÍ 140G – PRO VELKÁ PLEMENA PSŮ" style="width: 15rem; height: 25rem;">
 
                     <div class="card-body">
@@ -171,7 +171,7 @@
                 </div>
 
               <div class="col">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm align-items-center">
                   <img src="Images/K4.jpg" alt="BALENÍ 140G – ŠTĚŇATA A PSY STŘEDNÍCH PLEMEN" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
@@ -188,7 +188,7 @@
               </div>
 
               <div class="col">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm align-items-center">
                   <img src="Images/K2.jpg" alt="BALENÍ 85G – PRO MALÁ PLEMENA" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
@@ -205,7 +205,7 @@
               </div>
 
               <div class="col">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm align-items-center">
                   <img src="Images/K3.jpg" alt="BALENÍ 85G – PRO SENIORY MALÝCH PLEMEN" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
@@ -223,7 +223,7 @@
 
 
               <div class="col">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm align-items-center">
                   <img src="Images/K1.jpg" alt="BALENÍ 85G – PRO ŠTĚŇATA A MLADÉ PSY" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
@@ -240,7 +240,7 @@
               </div>
 
               <div class="col">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm align-items-center">
                   <img src="Images/D2.jpg" alt="BAVLNĚNÁ ČINKA, 4 UZLY" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
@@ -257,7 +257,7 @@
               </div>
 
               <div class="col">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm align-items-center">
                   <img src="Images/V3.jpg" alt="BRUTNÁKOVÝ OLEJ" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
@@ -274,7 +274,7 @@
               </div>
 
               <div class="col">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm align-items-center">
                   <img src="Images/V1.webp" alt="KLOUBNÍ VÝŽIVA – 400G" style="width: 15rem; height: 25rem;">
                   <div class="card-body">
                     <p class="card-text">KLOUBNÍ VÝŽIVA – 400G</p>
@@ -290,7 +290,7 @@
               </div>
 
               <div class="col">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm align-items-center">
                   <img src="Images/P2.jpg" alt="LISOVANÉ KOSTI – 6KS (13CM)" style="width: 15rem; height: 25rem;">
                   <div class="card-body">
                     <p class="card-text">LISOVANÉ KOSTI – 6KS (13CM)</p>
@@ -306,7 +306,7 @@
               </div>
 
               <div class="col">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm align-items-center">
                   <img src="Images/V2.jpg" alt="LOSOSOVÝ OLEJ (DOPLNĚK VÝŽIVY)" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
@@ -323,7 +323,7 @@
               </div>
 
               <div class="col">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm align-items-center">
                   <img src="Images/P3.jpg" alt="MASOVÉ PLÁTKY – 150G" style="width: 15rem; height: 25rem;">
                   <div class="card-body">
                     <p class="card-text">MASOVÉ PLÁTKY – 150G</p>
@@ -340,7 +340,7 @@
 
 
               <div class="col">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm align-items-center">
                   <img src="Images/P5.jpg" alt="MASOVÉ PLÁTKY – 250G" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
@@ -357,7 +357,7 @@
               </div>
 
               <div class="col">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm align-items-center">
                   <img src="Images/V4.jpg" alt="MULTIVITAMÍN PRO PSY" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
@@ -374,7 +374,7 @@
               </div>
 
               <div class="col">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm align-items-center">
                   <img src="Images/D4.webp" alt="NASTAVITELNÉ VODÍTKO – ČERNÉ" style="width: 15rem; height: 25rem;">
                   <div class="card-body">
                     <p class="card-text">NASTAVITELNÉ VODÍTKO – ČERNÉ</p>
@@ -390,7 +390,7 @@
               </div>
 
               <div class="col">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm align-items-center">
                   <img src="Images/D3.jpeg" alt="PELÍŠEK – 45X20CM" style="width: 15rem; height: 25rem;">
                   <div class="card-body">
                     <p class="card-text">PELÍŠEK – 45X20CM</p>
@@ -406,7 +406,7 @@
               </div>
 
               <div class="col">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm align-items-center">
                   <img src="Images/D1.jpg" alt="PLYŠOVÝ MÝVAL S PÍSKATKEM" style="width: 15rem; height: 25rem;">
                   <div class="card-body">
                     <p class="card-text">PLYŠOVÝ MÝVAL S PÍSKATKEM</p>
@@ -422,7 +422,7 @@
               </div>
 
               <div class="col">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm align-items-center">
                   <img src="Images/D5.webp" alt="REFLEXNÍ POSTROJ PRO PSY – ČERNÝ" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
@@ -439,7 +439,7 @@
               </div>
 
               <div class="col">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm align-items-center">
                   <img src="Images/P4.jpg" alt="SUŠENÉ MASO – 250G" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
@@ -456,7 +456,7 @@
               </div>
 
               <div class="col">
-                <div class="card shadow-sm">
+                <div class="card shadow-sm align-items-center">
                   <img src="Images/P1.jpg" alt="ŽVÝKACÍ SNACKY – 7KS (110G), PRO MALÉ PSY" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
