--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
         <section class="text-center container">
           <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
-              <img src="Images/logo.png" alt="WoofWoof" width="100%"/>
+              <img src="src/Images/logo.png" alt="WoofWoof" width="100%"/>
             </div>
           </div>
         </section>
         <div class="album bg-light">
           <div class="container">
-            <div class="d-flex pt-2">
-              <form class="center d-flex" action="">
+            <div class="d-flex pt-2 justify-content-center">
+              <form class="d-flex" action="">
                 <input class="text" type="text" id="find" placeholder="Vyhledat zboží">
                 <button class="btn btn-primary center mx-2 w-25">Hledat</button>
               </form>
@@ -71,7 +71,7 @@
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/Malypes.jpeg" alt="BALENÍ 12KG – PRO MALÉ PSY, JEHNĚČÍ S RÝŽÍ" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/Malypes.jpeg" alt="BALENÍ 12KG – PRO MALÉ PSY, JEHNĚČÍ S RÝŽÍ" style="width: 15rem; height: 25rem;">
                   <div class="card-body">
 
                     <p class="card-text">BALENÍ 12KG – PRO MALÉ PSY, JEHNĚČÍ S RÝŽÍ</p>
@@ -88,7 +88,7 @@
 
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/zverinabrambor.png" alt="BALENÍ 12KG – PRO PSY S CITLIVÝM ZAŽÍVÁNÍM, ZVĚŘINA, BRAMBOR" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/zverinabrambor.png" alt="BALENÍ 12KG – PRO PSY S CITLIVÝM ZAŽÍVÁNÍM, ZVĚŘINA, BRAMBOR" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
                     <p class="card-text">BALENÍ 12KG – PRO PSY S CITLIVÝM ZAŽÍVÁNÍM, ZVĚŘINA, BRAMBOR</p>
@@ -105,7 +105,7 @@
 
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/Velkypes.png" alt="BALENÍ 12KG – PRO VELKÉ PSY, JEHNĚČÍ S RÝŽÍ" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/Velkypes.png" alt="BALENÍ 12KG – PRO VELKÉ PSY, JEHNĚČÍ S RÝŽÍ" style="width: 15rem; height: 25rem;">
                   <div class="card-body">
                     <p class="card-text">BALENÍ 12KG – PRO VELKÉ PSY, JEHNĚČÍ S RÝŽÍ</p>
                     <div class="d-flex">
@@ -121,7 +121,7 @@
 
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/G1.webp" alt="BALENÍ 12KG – PRO PSY S VELKOU SPOTŘEBOU ENERGIE, KACHNÍ MASO A RÝŽE" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/G1.webp" alt="BALENÍ 12KG – PRO PSY S VELKOU SPOTŘEBOU ENERGIE, KACHNÍ MASO A RÝŽE" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
                     <p class="card-text">BALENÍ 12KG – PRO PSY S VELKOU SPOTŘEBOU ENERGIE</p>
@@ -138,7 +138,7 @@
 
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/Vystavni.jpeg" alt="BALENÍ 12KG – PRO VÝSTAVNÍ PSY, RYBÍ MASO" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/Vystavni.jpeg" alt="BALENÍ 12KG – PRO VÝSTAVNÍ PSY, RYBÍ MASO" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
                     <p class="card-text">BALENÍ 12KG – PRO VÝSTAVNÍ PSY, RYBÍ MASO</p>
@@ -155,7 +155,7 @@
 
                 <div class="col">
                   <div class="card shadow-sm align-items-center">
-                    <img src="Images/K5.jpg" alt="BALENÍ 140G – PRO VELKÁ PLEMENA PSŮ" style="width: 15rem; height: 25rem;">
+                    <img src="src/Images/K5.jpg" alt="BALENÍ 140G – PRO VELKÁ PLEMENA PSŮ" style="width: 15rem; height: 25rem;">
 
                     <div class="card-body">
                       <p class="card-text">BALENÍ 140G – PRO VELKÁ PLEMENA PSŮ</p>
@@ -172,7 +172,7 @@
 
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/K4.jpg" alt="BALENÍ 140G – ŠTĚŇATA A PSY STŘEDNÍCH PLEMEN" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/K4.jpg" alt="BALENÍ 140G – ŠTĚŇATA A PSY STŘEDNÍCH PLEMEN" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
                     <p class="card-text">BALENÍ 140G – ŠTĚŇATA A PSY STŘEDNÍCH PLEMEN</p>
@@ -189,7 +189,7 @@
 
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/K2.jpg" alt="BALENÍ 85G – PRO MALÁ PLEMENA" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/K2.jpg" alt="BALENÍ 85G – PRO MALÁ PLEMENA" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
                     <p class="card-text">BALENÍ 85G – PRO MALÁ PLEMENA</p>
@@ -206,7 +206,7 @@
 
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/K3.jpg" alt="BALENÍ 85G – PRO SENIORY MALÝCH PLEMEN" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/K3.jpg" alt="BALENÍ 85G – PRO SENIORY MALÝCH PLEMEN" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
                     <p class="card-text">BALENÍ 85G – PRO SENIORY MALÝCH PLEMEN</p>
@@ -224,7 +224,7 @@
 
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/K1.jpg" alt="BALENÍ 85G – PRO ŠTĚŇATA A MLADÉ PSY" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/K1.jpg" alt="BALENÍ 85G – PRO ŠTĚŇATA A MLADÉ PSY" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
                     <p class="card-text">BALENÍ 85G – PRO ŠTĚŇATA A MLADÉ PSY</p>
@@ -241,7 +241,7 @@
 
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/D2.jpg" alt="BAVLNĚNÁ ČINKA, 4 UZLY" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/D2.jpg" alt="BAVLNĚNÁ ČINKA, 4 UZLY" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
                     <p class="card-text">BAVLNĚNÁ ČINKA, 4 UZLY</p>
@@ -258,7 +258,7 @@
 
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/V3.jpg" alt="BRUTNÁKOVÝ OLEJ" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/V3.jpg" alt="BRUTNÁKOVÝ OLEJ" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
                     <p class="card-text">BRUTNÁKOVÝ OLEJ</p>
@@ -275,7 +275,7 @@
 
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/V1.webp" alt="KLOUBNÍ VÝŽIVA – 400G" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/V1.webp" alt="KLOUBNÍ VÝŽIVA – 400G" style="width: 15rem; height: 25rem;">
                   <div class="card-body">
                     <p class="card-text">KLOUBNÍ VÝŽIVA – 400G</p>
                     <div class="d-flex">
@@ -291,7 +291,7 @@
 
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/P2.jpg" alt="LISOVANÉ KOSTI – 6KS (13CM)" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/P2.jpg" alt="LISOVANÉ KOSTI – 6KS (13CM)" style="width: 15rem; height: 25rem;">
                   <div class="card-body">
                     <p class="card-text">LISOVANÉ KOSTI – 6KS (13CM)</p>
                     <div class="d-flex">
@@ -307,7 +307,7 @@
 
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/V2.jpg" alt="LOSOSOVÝ OLEJ (DOPLNĚK VÝŽIVY)" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/V2.jpg" alt="LOSOSOVÝ OLEJ (DOPLNĚK VÝŽIVY)" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
                     <p class="card-text">LOSOSOVÝ OLEJ (DOPLNĚK VÝŽIVY)</p>
@@ -324,7 +324,7 @@
 
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/P3.jpg" alt="MASOVÉ PLÁTKY – 150G" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/P3.jpg" alt="MASOVÉ PLÁTKY – 150G" style="width: 15rem; height: 25rem;">
                   <div class="card-body">
                     <p class="card-text">MASOVÉ PLÁTKY – 150G</p>
                     <div class="d-flex">
@@ -341,7 +341,7 @@
 
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/P5.jpg" alt="MASOVÉ PLÁTKY – 250G" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/P5.jpg" alt="MASOVÉ PLÁTKY – 250G" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
                     <p class="card-text">MASOVÉ PLÁTKY – 250G</p>
@@ -358,7 +358,7 @@
 
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/V4.jpg" alt="MULTIVITAMÍN PRO PSY" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/V4.jpg" alt="MULTIVITAMÍN PRO PSY" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
                     <p class="card-text">MULTIVITAMÍN PRO PSY</p>
@@ -375,7 +375,7 @@
 
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/D4.webp" alt="NASTAVITELNÉ VODÍTKO – ČERNÉ" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/D4.webp" alt="NASTAVITELNÉ VODÍTKO – ČERNÉ" style="width: 15rem; height: 25rem;">
                   <div class="card-body">
                     <p class="card-text">NASTAVITELNÉ VODÍTKO – ČERNÉ</p>
                     <div class="d-flex">
@@ -391,7 +391,7 @@
 
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/D3.jpeg" alt="PELÍŠEK – 45X20CM" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/D3.jpeg" alt="PELÍŠEK – 45X20CM" style="width: 15rem; height: 25rem;">
                   <div class="card-body">
                     <p class="card-text">PELÍŠEK – 45X20CM</p>
                     <div class="d-flex">
@@ -407,7 +407,7 @@
 
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/D1.jpg" alt="PLYŠOVÝ MÝVAL S PÍSKATKEM" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/D1.jpg" alt="PLYŠOVÝ MÝVAL S PÍSKATKEM" style="width: 15rem; height: 25rem;">
                   <div class="card-body">
                     <p class="card-text">PLYŠOVÝ MÝVAL S PÍSKATKEM</p>
                     <div class="d-flex">
@@ -423,7 +423,7 @@
 
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/D5.webp" alt="REFLEXNÍ POSTROJ PRO PSY – ČERNÝ" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/D5.webp" alt="REFLEXNÍ POSTROJ PRO PSY – ČERNÝ" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
                     <p class="card-text">REFLEXNÍ POSTROJ PRO PSY – ČERNÝ</p>
@@ -440,7 +440,7 @@
 
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/P4.jpg" alt="SUŠENÉ MASO – 250G" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/P4.jpg" alt="SUŠENÉ MASO – 250G" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
                     <p class="card-text">SUŠENÉ MASO – 250G</p>
@@ -457,7 +457,7 @@
 
               <div class="col">
                 <div class="card shadow-sm align-items-center">
-                  <img src="Images/P1.jpg" alt="ŽVÝKACÍ SNACKY – 7KS (110G), PRO MALÉ PSY" style="width: 15rem; height: 25rem;">
+                  <img src="src/Images/P1.jpg" alt="ŽVÝKACÍ SNACKY – 7KS (110G), PRO MALÉ PSY" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
                     <p class="card-text">ŽVÝKACÍ SNACKY – 7KS (110G), PRO MALÉ PSY</p>
