--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="container">
             <div class="d-flex pt-2 justify-content-center">
               <form class="d-flex" action="">
-                <input class="text" type="text" id="find" placeholder="Vyhledat zboží">
+                <input class="text rounded-2" type="text" id="find" placeholder="Vyhledat zboží">
                 <button class="btn btn-primary center mx-2 w-25">Hledat</button>
               </form>
             </div>
