--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
         </section>
         <div class="album bg-light">
           <div class="container">
-            <div class="d-flex pt-2 justify-content-center">
+            <div class="rounded-2" style="background-color: #00275a;"><p class="text-center text-white">Právě nakupujete za zvýhodněné ceny</p></div>
+            <div class="d-flex justify-content-center">
               <form class="d-flex" action="">
-                <input class="text rounded-2" type="text" id="find" placeholder="Vyhledat zboží">
-                <button class="btn btn-primary center mx-2 w-25">Hledat</button>
+                <input style="width: 20rem" class="rounded-2" type="text" id="find" placeholder="Co hledáte? Např. Konzervy">
+                <button class="btn btn-primary center mx-2">Hledat</button>
               </form>
             </div>
             <div class="d-flex justify-content-center my-2 gap-2">
