--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
         <div class="bg-dark">
-          <li class="container px-3">
+          <li class="container" style="padding: 0rem;">
             <a href="" class="text-white text-decoration-none float-end font-monospace">
             Můj účet
             </a>
@@ -20,39 +20,40 @@
         </div>
     <div class="bg-dark navbar-dark">
     <div class="navbar navbar-dark bg-dark shadow-sm d-flex container">
-      <a href="#" class="navbar-brand mx-3">
+      <a href="#" class="navbar-brand">
         <strong>WoofWoof</strong>
       </a>
-      <div class="d-flex align-items-end">
-        <a href="#" class="navbar-brand d-flex">
-         Oblíbené
-       </a>
-
-       <a href="#" class="navbar-brand d-flex">
-          O nás
-        </a>
-
-        <a href="#" class="navbar-brand d-flex">
-         Můj účet
-        </a>
-
-       <a href="#" class="navbar-brand d-flex">
-          Košík
-       </a>
-      </div>
+        <ul class="d-flex text-warning list-unstyled">
+          <li class="mx-2">
+            <a href="">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-heart" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428m0 0a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572"></path>
+             </svg>
+            </a>
+          </li>
+          <li class="mx-2">
+            <a href="">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-cart" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <circle cx="6" cy="19" r="2"></circle>
+                <circle cx="17" cy="19" r="2"></circle>
+                <path d="M17 17h-11v-14h-2"></path>
+                <path d="M6 5l14 1l-1 7h-13"></path>
+             </svg>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <circle cx="12" cy="7" r="4"></circle>
+                <path d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"></path>
+             </svg>
+            </a>
+          </li>
+        </ul>
     </div>
-  </div>
-  <div class="bg-dark">
-    <ul>
-      <li>
-        <a href="">
-          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-heart" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-            <path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428m0 0a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572"></path>
-         </svg>
-        </a>
-      </li>
-    </ul>
   </div>
   </header>
 
