--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
           </li>
         </div>
     <div class="bg-dark navbar-dark">
-    <div class="navbar navbar-dark bg-dark shadow-sm d-flex container">
-      <a href="#" class="navbar-brand">
+    <div class="navbar navbar-dark bg-dark shadow-sm d-flex container" style="padding: 0rem;">
+      <a href="#" class="text-decoration-none fw-bold h2" style="margin: 0rem;">
         <strong>WoofWoof</strong>
       </a>
-        <ul class="d-flex text-warning list-unstyled">
+        <ul class="d-flex text-warning list-unstyled" style="margin: 0rem;">
           <li class="mx-2">
             <a href="">
               <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-heart" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
