--- a/src/produkt1.html
+++ b/src/produkt1.html
@@ -50,12 +50,31 @@
   </div>
   </header>
   <main class="container">
-    <div class="row">
-        <div class="col">
-            <p>nic</p>
+    <div class="row mt-5">
+        <div class="col-5">
+            <img src="Images/Malypes.jpeg" alt="BALENÍ 12KG – PRO MALÉ PSY, JEHNĚČÍ S RÝŽÍ" style="width: 15rem; height: 25rem;">
         </div>
-        <div class="col">
-            <p>nic</p>
+        <div class="col-7">
+            <div class="row row-cols-1">
+                <div class="col">
+                    <p class="fw-bolder h2 text-center" style="color: #0d6efd;">BALENÍ 12KG – PRO MALÉ PSY, JEHNĚČÍ S RÝŽÍ</p>
+                </div>
+                <div class="col mt-5">
+                    <p class="h6 lead lh-sm font-monospace">Kompletní suché prémiové krmivo pro dospělé psy všech plemen s hypoalergenní recepturou je od značky Fitmin. Správný poměr omega 3 a 6 mastných kyselin zajistí zdravou kůži a srst, jehněčí maso je šetrné k zažívání.</p>
+                </div>
+                <div class="d-flex flex-row-reverse mt-2 gap-2">
+                    <div>
+                        <a href="/src/produkt1.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
+                            Koupit zrychleně
+                        </a>
+                    </div>
+                    <div>
+                        <a href="/src/produkt1.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
+                            Do košíku
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
   </main>
