--- a/src/produkt1.html
+++ b/src/produkt1.html
@@ -17,6 +17,19 @@
         <strong>WoofWoof</strong>
       </a>
         <ul class="d-flex text-warning list-unstyled" style="margin: 0rem;">
+            <li class="mx-2">
+                <a href="" title="O nás">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-address-book" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                    <path d="M20 6v12a2 2 0 0 1 -2 2h-10a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2h10a2 2 0 0 1 2 2z"></path>
+                    <path d="M10 16h6"></path>
+                    <circle cx="13" cy="11" r="2"></circle>
+                    <path d="M4 8h3"></path>
+                    <path d="M4 12h3"></path>
+                    <path d="M4 16h3"></path>
+                 </svg>
+                </a>
+              </li>
           <li class="mx-2">
             <a href="" title="Oblíbené">
               <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-heart" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -59,19 +72,34 @@
                 <div class="col">
                     <p class="fw-bolder h2 text-center" style="color: #0d6efd;">BALENÍ 12KG – PRO MALÉ PSY, JEHNĚČÍ S RÝŽÍ</p>
                 </div>
-                <div class="col mt-5">
+                <div class="col mt-2">
                     <p class="h6 lead lh-sm font-monospace">Kompletní suché prémiové krmivo pro dospělé psy všech plemen s hypoalergenní recepturou je od značky Fitmin. Správný poměr omega 3 a 6 mastných kyselin zajistí zdravou kůži a srst, jehněčí maso je šetrné k zažívání.</p>
                 </div>
                 <div class="d-flex flex-row-reverse mt-2 gap-2">
                     <div>
                         <a href="/src/produkt1.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
-                            Koupit zrychleně
-                        </a>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrows-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                <line x1="21" y1="17" x2="3" y2="17"></line>
+                                <path d="M18 4l3 3l-3 3"></path>
+                                <path d="M18 20l3 -3l-3 -3"></path>
+                                <line x1="21" y1="7" x2="3" y2="7"></line>
+                             </svg>
+                           Koupit zrychleně
+                          </a>
                     </div>
                     <div>
                         <a href="/src/produkt1.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
-                            Do košíku
-                        </a>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-cart-plus" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                <circle cx="6" cy="19" r="2"></circle>
+                                <circle cx="17" cy="19" r="2"></circle>
+                                <path d="M17 17h-11v-14h-2"></path>
+                                <path d="M6 5l6.005 .429m7.138 6.573l-.143 .998h-13"></path>
+                                <path d="M15 6h6m-3 -3v6"></path>
+                             </svg>
+                           Do košíku
+                          </a>
                     </div>
                 </div>
             </div>
