--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <div class="bg-dark navbar-dark">
+    <div class="bg-dark navbar-dark p-3">
     <div class="navbar navbar-dark bg-dark shadow-sm d-flex container" style="padding: 0rem;">
       <a href="#" class="text-decoration-none fw-bold h2" style="margin: 0rem;">
         <strong>WoofWoof</strong>
