--- a/src/produkt1.html
+++ b/src/produkt1.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <div class="bg-dark navbar-dark">
+    <div class="bg-dark navbar-dark p-3">
     <div class="navbar navbar-dark bg-dark shadow-sm d-flex container" style="padding: 0rem;">
       <a href="/index.html" class="text-decoration-none fw-bold h2" style="margin: 0rem;">
         <strong>WoofWoof</strong>
@@ -75,7 +75,7 @@
                 <div class="col mt-2">
                     <p class="h6 lead lh-sm font-monospace">Kompletní suché prémiové krmivo pro dospělé psy všech plemen s hypoalergenní recepturou je od značky Fitmin. Správný poměr omega 3 a 6 mastných kyselin zajistí zdravou kůži a srst, jehněčí maso je šetrné k zažívání.</p>
                 </div>
-                <div class="d-flex flex-row-reverse mt-2 gap-2">
+                <div class="d-flex flex-row-reverse mt-2 gap-2 justify-content-center">
                     <div>
                         <a href="/src/produkt1.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrows-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
