--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </section>
         <div class="album bg-light">
           <div class="container">
-            <div class="rounded-2" style="background-color: #00275a;"><p class="text-center text-white">Právě nakupujete za zvýhodněné ceny</p></div>
+            <div class="rounded-2" style="background-color: #00275a;"><p class="text-center text-white">Právě nakupujete za zvýhodněné ceny!</p></div>
             <div class="d-flex justify-content-center">
               <form class="d-flex" action="">
                 <input style="width: 20rem" class="rounded-2" type="text" id="find" placeholder="Co hledáte? Např. Konzervy">
