--- a/src/produkt1.html
+++ b/src/produkt1.html
@@ -101,6 +101,21 @@
                            Do košíku
                           </a>
                     </div>
+                    <div>
+                        <a href="/src/produkt1.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-heart-plus" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                <path d="M13 19l-1 1l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 0 1 8.003 5.996"></path>
+                                <path d="M14 16h6"></path>
+                                <path d="M17 13v6"></path>
+                             </svg>
+                           Oblíbené
+                          </a>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                    <p class="display-1">Cena</p>
+                    <p class="display-3">1 500,-</p>
                 </div>
             </div>
         </div>
