--- a/src/produkt1.html
+++ b/src/produkt1.html
@@ -113,9 +113,9 @@
                           </a>
                     </div>
                 </div>
-                <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex justify-content-end align-items-center">
                     <p class="display-1">Cena</p>
-                    <p class="display-3">1 500,-</p>
+                    <p class="display-3 mx-5">1 500,-</p>
                 </div>
             </div>
         </div>
