--- a/src/produkt1.html
+++ b/src/produkt1.html
@@ -65,7 +65,7 @@
   <main class="container">
     <div class="row mt-5">
         <div class="col-5">
-            <img src="Images/Malypes.jpeg" alt="BALENÍ 12KG – PRO MALÉ PSY, JEHNĚČÍ S RÝŽÍ" style="width: 15rem; height: 25rem;">
+            <img src="Images/Malypes.jpeg" alt="BALENÍ 12KG – PRO MALÉ PSY, JEHNĚČÍ S RÝŽÍ" style="width: 20rem; height: 30rem;">
         </div>
         <div class="col-7">
             <div class="row row-cols-1">
@@ -75,8 +75,14 @@
                 <div class="col mt-2">
                     <p class="h6 lead lh-sm font-monospace">Kompletní suché prémiové krmivo pro dospělé psy všech plemen s hypoalergenní recepturou je od značky Fitmin. Správný poměr omega 3 a 6 mastných kyselin zajistí zdravou kůži a srst, jehněčí maso je šetrné k zažívání.</p>
                 </div>
+
+                <div class="d-flex justify-content-center align-items-center">
+                    <p class="display-3 mx-5">1 500,-</p>
+                </div>
+
                 <div class="d-flex flex-row-reverse mt-2 gap-2 justify-content-center">
                     <div>
+
                         <a href="/src/produkt1.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrows-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
@@ -113,10 +119,22 @@
                           </a>
                     </div>
                 </div>
-                <div class="d-flex justify-content-end align-items-center">
-                    <p class="display-1">Cena</p>
-                    <p class="display-3 mx-5">1 500,-</p>
-                </div>
+
+                <div class="d-flex flex-row-reverse mt-2 gap-2 justify-content-center">
+                    <div>
+
+                        <a href="index.html" role="button" class="btn btn-lg btn-outline-danger rounded-5 my-5">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrows-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                <line x1="21" y1="17" x2="3" y2="17"></line>
+                                <path d="M18 4l3 3l-3 3"></path>
+                                <path d="M18 20l3 -3l-3 -3"></path>
+                                <line x1="21" y1="7" x2="3" y2="7"></line>
+                            </svg>
+                            Zpět na hlavní stránku
+                        </a>
+                    </div>
+
             </div>
         </div>
     </div>
