--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
             </a>
           </li>
           <li class="mx-2">
+            <a href="" title="Účet">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <circle cx="12" cy="7" r="4"></circle>
+                <path d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"></path>
+             </svg>
+            </a>
+          </li>
+          <li>
             <a href="" title="Košík">
               <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-cart" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
@@ -46,15 +55,6 @@
                 <circle cx="17" cy="19" r="2"></circle>
                 <path d="M17 17h-11v-14h-2"></path>
                 <path d="M6 5l14 1l-1 7h-13"></path>
-             </svg>
-            </a>
-          </li>
-          <li>
-            <a href="" title="Účet">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                <circle cx="12" cy="7" r="4"></circle>
-                <path d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"></path>
              </svg>
             </a>
           </li>
@@ -88,7 +88,7 @@
               <button class="btn btn-secondary center w-25">Vitamíny a doplňky stravy</button>
             </div>
 
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
               <div class="col">
                 <div class="card shadow-sm align-items-center">
                   <img src="src/Images/Malypes.jpeg" alt="BALENÍ 12KG – PRO MALÉ PSY, JEHNĚČÍ S RÝŽÍ" style="width: 15rem; height: 25rem;">
@@ -121,13 +121,13 @@
                     <div class="d-flex">
                       <div class="btn-group flex-wrap">
                         <div class="btn-group flex-wrap">
-                        <a href="/src/produkt1.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
+                        <a href="/src/produkt2.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
                           Zobrazit detail
                       </a>
-                      <a href="/src/produkt1.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
+                      <a href="/src/produkt2.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
                         ❤ Oblíbené
                       </a>
-                      <a href="/src/produkt1.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
+                      <a href="/src/produkt2.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
                         Do košíku
                       </a>
                       </div>
@@ -678,13 +678,11 @@
         </div>
       </main>
 
-    <footer class="text-muted py-5">
+    <footer class="text-muted py-5 bg-dark">
       <div class="container">
-        <p class="float-end mb-1">
-          <a href="#">Back to top</a>
+        <p class="text-center mb-1">
+          <a href="#">Vrátit se na začátek</a>
         </p>
-        <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-        <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
       </div>
     </footer>
     <script src="script.js"></script>
