--- a/src/Produkt4.html
+++ b/src/Produkt4.html
@@ -65,19 +65,19 @@
 <main class="container">
   <div class="row mt-5">
     <div class="col-5">
-      <img src="Images/zverinabrambor.png" alt="BALENÍ 12KG – PRO PSY S CITLIVÝM ZAŽÍVÁNÍM, ZVĚŘINA, BRAMBOR" style="width: 20rem; height: 30rem;">
+      <img src="Images/G1.webp" alt="BALENÍ 12KG – PRO PSY S VELKOU SPOTŘEBOU ENERGIE" style="width: 20rem; height: 30rem;">
     </div>
     <div class="col-7">
       <div class="row row-cols-1">
         <div class="col">
-          <p class="fw-bolder h2 text-center" style="color: #0d6efd;">BALENÍ 12KG – PRO PSY S CITLIVÝM ZAŽÍVÁNÍM, ZVĚŘINA, BRAMBOR</p>
+          <p class="fw-bolder h2 text-center" style="color: #0d6efd;">BALENÍ 12KG – PRO PSY S VELKOU SPOTŘEBOU ENERGIE</p>
         </div>
         <div class="col mt-2">
           <p class="h6 lead lh-sm font-monospace">Kompletní suché prémiové krmivo pro dospělé psy všech plemen s hypoalergenní recepturou je od značky Fitmin. Správný poměr omega 3 a 6 mastných kyselin zajistí zdravou kůži a srst, jehněčí maso je šetrné k zažívání.</p>
         </div>
 
         <div class="d-flex justify-content-center align-items-center">
-          <p class="display-3 mx-5">1 200,-</p>
+          <p class="display-3 mx-5">1 500,-</p>
         </div>
 
         <div class="d-flex flex-row-reverse mt-2 gap-2 justify-content-center">
