--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <div class="bg-dark navbar-dark p-3">
+    <div class="bg-dark navbar-dark p-3 fixed-top">
     <div class="navbar navbar-dark bg-dark shadow-sm d-flex container" style="padding: 0rem;">
       <a href="#" class="text-decoration-none fw-bold h2" style="margin: 0rem;">
         <strong>WoofWoof</strong>
@@ -677,8 +677,19 @@
           </div>
         </div>
       </main>
-
-    <footer class="text-muted py-5 bg-dark">
+      <div class="container">
+        <footer class="py-3 my-4">
+          <ul class="nav justify-content-center border-bottom pb-2 mb-2">
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Domů</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Novinky</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Ceník</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">O nás</a></li>
+          </ul>
+          <p class="text-center text-muted">© 2022 WoofWoof, Inc</p>
+        </footer>
+      </div>
+    <footer class="text-muted py-2 bg-dark">
       <div class="container">
         <p class="text-center mb-1">
           <a href="#">Vrátit se na začátek</a>
