--- a/src/produkt4.html
+++ b/src/produkt4.html
@@ -123,7 +123,7 @@
         <div class="d-flex flex-row-reverse mt-2 gap-2 justify-content-center">
           <div>
 
-            <a href="/index.html" role="button" class="btn btn-lg btn-outline-danger rounded-5 my-5">
+            <a href="index.html" role="button" class="btn btn-lg btn-outline-danger rounded-5 my-5">
               <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrows-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                 <line x1="21" y1="17" x2="3" y2="17"></line>
@@ -139,14 +139,4 @@
       </div>
     </div>
 </main>
-  <footer class="py-3 my-4 footer">
-    <ul class="nav justify-content-center border-bottom pb-2 mb-2">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Domů</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Novinky</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Ceník</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">O nás</a></li>
-    </ul>
-    <p class="text-center text-muted">© 2022 WoofWoof, Inc</p>
-  </footer>
 </body>
