--- a/src/produkt2.html
+++ b/src/produkt2.html
@@ -83,7 +83,7 @@
         <div class="d-flex flex-row-reverse mt-2 gap-2 justify-content-center">
           <div>
 
-            <a href="/src/Produkt1.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
+            <a href="/src/produkt2.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
               <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrows-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                 <line x1="21" y1="17" x2="3" y2="17"></line>
@@ -95,7 +95,7 @@
             </a>
           </div>
           <div>
-            <a href="/src/Produkt1.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
+            <a href="/src/produkt2.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
               <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-cart-plus" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                 <circle cx="6" cy="19" r="2"></circle>
@@ -108,7 +108,7 @@
             </a>
           </div>
           <div>
-            <a href="/src/Produkt1.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
+            <a href="/src/produkt2.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
               <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-heart-plus" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                 <path d="M13 19l-1 1l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 0 1 8.003 5.996"></path>
