--- a/src/produkt7.html
+++ b/src/produkt7.html
@@ -65,25 +65,25 @@
 <main class="container">
     <div class="row mt-5">
         <div class="col-5">
-            <img src="Images/Velkypes.png" alt="BALENÍ 12KG – PRO VELKÉ PSY, JEHNĚČÍ S RÝŽÍ" style="width: 20rem; height: 30rem;">
+            <img src="Images/K4.jpg" alt="BALENÍ 140G – ŠTĚŇATA A PSY STŘEDNÍCH PLEMEN" style="width: 20rem; height: 30rem;">
         </div>
         <div class="col-7">
             <div class="row row-cols-1">
                 <div class="col">
-                    <p class="fw-bolder h2 text-center" style="color: #0d6efd;">BALENÍ 12KG – PRO VELKÉ PSY, JEHNĚČÍ S RÝŽÍ</p>
+                    <p class="fw-bolder h2 text-center" style="color: #0d6efd;">BALENÍ 140G – ŠTĚŇATA A PSY STŘEDNÍCH PLEMEN</p>
                 </div>
                 <div class="col mt-2">
-                    <p class="h6 lead lh-sm font-monospace">Brit Care je české superprémiové hypoalergenní krmivo, které nevyvolává u psů žádné potravní intolerance ani alergie. Pro výrobu jsou vybírány ingredience vysoké kvality a jejich výběr zajišťuje vysokou stravitelnost, podporují imunitní systém, celkovou kondici psa a prevenci proti vzniku běžných onemocnění.</p>
+                    <p class="h6 lead lh-sm font-monospace">Kompletní suché prémiové krmivo pro dospělé psy všech plemen s hypoalergenní recepturou je od značky Fitmin. Správný poměr omega 3 a 6 mastných kyselin zajistí zdravou kůži a srst, jehněčí maso je šetrné k zažívání.</p>
                 </div>
 
                 <div class="d-flex justify-content-center align-items-center">
-                    <p class="display-3 mx-5">1 100,-</p>
+                    <p class="display-3 mx-5">290,-</p>
                 </div>
 
                 <div class="d-flex flex-row-reverse mt-2 gap-2 justify-content-center">
                     <div>
 
-                        <a href="/src/produkt3.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
+                        <a href="/src/produkt7.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrows-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <line x1="21" y1="17" x2="3" y2="17"></line>
@@ -95,7 +95,7 @@
                         </a>
                     </div>
                     <div>
-                        <a href="/src/produkt3.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
+                        <a href="/src/produkt7.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-cart-plus" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <circle cx="6" cy="19" r="2"></circle>
@@ -108,7 +108,7 @@
                         </a>
                     </div>
                     <div>
-                        <a href="/src/produkt3.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
+                        <a href="/src/produkt7.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-heart-plus" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <path d="M13 19l-1 1l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 0 1 8.003 5.996"></path>
