--- a/src/produkt6.html
+++ b/src/produkt6.html
@@ -139,4 +139,14 @@
       </div>
     </div>
 </main>
+<footer class="py-3 my-4 footer">
+  <ul class="nav justify-content-center border-bottom pb-2 mb-2">
+    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Domů</a></li>
+    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Novinky</a></li>
+    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Ceník</a></li>
+    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">O nás</a></li>
+  </ul>
+  <p class="text-center text-muted">© 2022 WoofWoof, Inc</p>
+</footer>
 </body>
