--- a/src/produkt14.html
+++ b/src/produkt14.html
@@ -64,10 +64,10 @@
 </header>
 <main class="container">
     <div class="row mt-5">
-        <div class="col-5">
+        <div class="col-md-5">
             <img src="Images/P5.jpg" alt="MASOVÉ PLÁTKY – 250G" style="width: 20rem; height: 30rem;">
         </div>
-        <div class="col-7">
+        <div class="col-md-7">
             <div class="row row-cols-1">
                 <div class="col">
                     <p class="fw-bolder h2 text-center" style="color: #0d6efd;">MASOVÉ PLÁTKY – 250G</p>
@@ -139,14 +139,5 @@
             </div>
         </div>
 </main>
-<footer class="py-3 my-4 footer">
-    <ul class="nav justify-content-center border-bottom pb-2 mb-2">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Domů</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Novinky</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Ceník</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">O nás</a></li>
-    </ul>
-    <p class="text-center text-muted">© 2022 WoofWoof, Inc</p>
-  </footer>
+
 </body>
