--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
                 <div class="card shadow-sm align-items-center">
                   <img src="src/Images/Malypes.jpeg" alt="BALENÍ 12KG – PRO MALÉ PSY, JEHNĚČÍ S RÝŽÍ" style="width: 15rem; height: 25rem;">
                   <div class="card-body">
-
+                    <div class="d-flex justify-content-end mb-3">
+                      <p class="h3">Cena 1 500,-</p>
+                    </div>
                     <p class="card-text">BALENÍ 12KG – PRO MALÉ PSY, JEHNĚČÍ S RÝŽÍ</p>
                     <div class="d-flex">
                       <div class="btn-group flex-wrap">
