--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
                   <img src="src/Images/zverinabrambor.png" alt="BALENÍ 12KG – PRO PSY S CITLIVÝM ZAŽÍVÁNÍM, ZVĚŘINA, BRAMBOR" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
+                    <div class="d-flex justify-content-end mb-3">
+                      <p class="h3">Cena 1 200,-</p>
+                    </div>
                     <p class="card-text">BALENÍ 12KG – PRO PSY S CITLIVÝM ZAŽÍVÁNÍM, ZVĚŘINA, BRAMBOR</p>
                     <div class="d-flex">
                       <div class="btn-group flex-wrap">
@@ -143,6 +146,9 @@
                 <div class="card shadow-sm align-items-center">
                   <img src="src/Images/Velkypes.png" alt="BALENÍ 12KG – PRO VELKÉ PSY, JEHNĚČÍ S RÝŽÍ" style="width: 15rem; height: 25rem;">
                   <div class="card-body">
+                    <div class="d-flex justify-content-end mb-3">
+                      <p class="h3">Cena 1 100,-</p>
+                    </div>
                     <p class="card-text">BALENÍ 12KG – PRO VELKÉ PSY, JEHNĚČÍ S RÝŽÍ</p>
                     <div class="d-flex">
                       <div class="btn-group flex-wrap">
@@ -168,6 +174,9 @@
                   <img src="src/Images/G1.webp" alt="BALENÍ 12KG – PRO PSY S VELKOU SPOTŘEBOU ENERGIE, KACHNÍ MASO A RÝŽE" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
+                    <div class="d-flex justify-content-end mb-3">
+                      <p class="h3">Cena 1 500,-</p>
+                    </div>
                     <p class="card-text">BALENÍ 12KG – PRO PSY S VELKOU SPOTŘEBOU ENERGIE</p>
                     <div class="d-flex">
                       <div class="btn-group flex-wrap">
@@ -193,6 +202,9 @@
                   <img src="src/Images/Vystavni.jpeg" alt="BALENÍ 12KG – PRO VÝSTAVNÍ PSY, RYBÍ MASO" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
+                    <div class="d-flex justify-content-end mb-3">
+                      <p class="h3">Cena 1 100,-</p>
+                    </div>
                     <p class="card-text">BALENÍ 12KG – PRO VÝSTAVNÍ PSY, RYBÍ MASO</p>
                     <div class="d-flex">
                       <div class="btn-group flex-wrap">
@@ -218,6 +230,9 @@
                     <img src="src/Images/K5.jpg" alt="BALENÍ 140G – PRO VELKÁ PLEMENA PSŮ" style="width: 15rem; height: 25rem;">
 
                     <div class="card-body">
+                      <div class="d-flex justify-content-end mb-3">
+                        <p class="h3">Cena 300,-</p>
+                      </div>
                       <p class="card-text">BALENÍ 140G – PRO VELKÁ PLEMENA PSŮ</p>
                       <div class="d-flex">
                         <div class="btn-group flex-wrap">
@@ -241,6 +256,9 @@
                   <img src="src/Images/K4.jpg" alt="BALENÍ 140G – ŠTĚŇATA A PSY STŘEDNÍCH PLEMEN" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
+                    <div class="d-flex justify-content-end mb-3">
+                      <p class="h3">Cena 290,-</p>
+                    </div>
                     <p class="card-text">BALENÍ 140G – ŠTĚŇATA A PSY STŘEDNÍCH PLEMEN</p>
                     <div class="d-flex">
                       <div class="btn-group flex-wrap">
@@ -266,6 +284,9 @@
                   <img src="src/Images/K2.jpg" alt="BALENÍ 85G – PRO MALÁ PLEMENA" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
+                    <div class="d-flex justify-content-end mb-3">
+                      <p class="h3">Cena 290,-</p>
+                    </div>
                     <p class="card-text">BALENÍ 85G – PRO MALÁ PLEMENA</p>
                     <div class="d-flex">
                       <div class="btn-group flex-wrap">
@@ -293,6 +314,9 @@
                   <img src="src/Images/D2.jpg" alt="BAVLNĚNÁ ČINKA, 4 UZLY" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
+                    <div class="d-flex justify-content-end mb-3">
+                      <p class="h3">Cena 90,-</p>
+                    </div>
                     <p class="card-text">BAVLNĚNÁ ČINKA, 4 UZLY</p>
                     <div class="d-flex">
                       <div class="btn-group flex-wrap">
@@ -318,6 +342,9 @@
                   <img src="src/Images/V3.jpg" alt="BRUTNÁKOVÝ OLEJ" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
+                    <div class="d-flex justify-content-end mb-3">
+                      <p class="h3">Cena 150,-</p>
+                    </div>
                     <p class="card-text">BRUTNÁKOVÝ OLEJ</p>
                     <div class="d-flex">
                       <div class="btn-group flex-wrap">
@@ -342,6 +369,9 @@
                 <div class="card shadow-sm align-items-center">
                   <img src="src/Images/V1.webp" alt="KLOUBNÍ VÝŽIVA – 400G" style="width: 15rem; height: 25rem;">
                   <div class="card-body">
+                    <div class="d-flex justify-content-end mb-3">
+                      <p class="h3">Cena 300,-</p>
+                    </div>
                     <p class="card-text">KLOUBNÍ VÝŽIVA – 400G</p>
                     <div class="d-flex">
                       <div class="btn-group flex-wrap">
@@ -366,6 +396,9 @@
                 <div class="card shadow-sm align-items-center">
                   <img src="src/Images/P2.jpg" alt="LISOVANÉ KOSTI – 6KS (13CM)" style="width: 15rem; height: 25rem;">
                   <div class="card-body">
+                    <div class="d-flex justify-content-end mb-3">
+                      <p class="h3">Cena 49,-</p>
+                    </div>
                     <p class="card-text">LISOVANÉ KOSTI – 6KS (13CM)</p>
                     <div class="d-flex">
                       <div class="btn-group flex-wrap">
@@ -391,6 +424,9 @@
                   <img src="src/Images/V2.jpg" alt="LOSOSOVÝ OLEJ (DOPLNĚK VÝŽIVY)" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
+                    <div class="d-flex justify-content-end mb-3">
+                      <p class="h3">Cena 169,-</p>
+                    </div>
                     <p class="card-text">LOSOSOVÝ OLEJ (DOPLNĚK VÝŽIVY)</p>
                     <div class="d-flex">
                       <div class="btn-group flex-wrap">
@@ -416,6 +452,9 @@
                   <img src="src/Images/P5.jpg" alt="MASOVÉ PLÁTKY – 250G" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
+                    <div class="d-flex justify-content-end mb-3">
+                      <p class="h3">Cena 209,-</p>
+                    </div>
                     <p class="card-text">MASOVÉ PLÁTKY – 250G</p>
                     <div class="d-flex">
                       <div class="btn-group flex-wrap">
@@ -441,6 +480,9 @@
                   <img src="src/Images/V4.jpg" alt="MULTIVITAMÍN PRO PSY" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
+                    <div class="d-flex justify-content-end mb-3">
+                      <p class="h3">Cena 169,-</p>
+                    </div>
                     <p class="card-text">MULTIVITAMÍN PRO PSY</p>
                     <div class="d-flex">
                       <div class="btn-group flex-wrap">
@@ -467,6 +509,9 @@
                   <img src="src/Images/D5.webp" alt="REFLEXNÍ POSTROJ PRO PSY – ČERNÝ" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
+                    <div class="d-flex justify-content-end mb-3">
+                      <p class="h3">Cena 309,-</p>
+                    </div>
                     <p class="card-text">REFLEXNÍ POSTROJ PRO PSY – ČERNÝ</p>
                     <div class="d-flex">
                       <div class="btn-group flex-wrap">
@@ -492,6 +537,9 @@
                   <img src="src/Images/P4.jpg" alt="SUŠENÉ MASO – 250G" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
+                    <div class="d-flex justify-content-end mb-3">
+                      <p class="h3">Cena 209,-</p>
+                    </div>
                     <p class="card-text">SUŠENÉ MASO – 250G</p>
                     <div class="d-flex">
                       <div class="btn-group flex-wrap">
@@ -517,6 +565,9 @@
                   <img src="src/Images/P1.jpg" alt="ŽVÝKACÍ SNACKY – 7KS (110G), PRO MALÉ PSY" style="width: 15rem; height: 25rem;">
 
                   <div class="card-body">
+                    <div class="d-flex justify-content-end mb-3">
+                      <p class="h3">Cena 49,-</p>
+                    </div>
                     <p class="card-text">ŽVÝKACÍ SNACKY – 7KS (110G), PRO MALÉ PSY</p>
                     <div class="d-flex">
                       <div class="btn-group flex-wrap">
