--- a/index.html
+++ b/index.html
@@ -603,10 +603,10 @@
           <p class="text-center text-muted">© 2022 WoofWoof, Inc</p>
         </footer>
       </div>
-    <footer class="text-muted py-2 bg-dark">
+    <footer class="py-2 bg-dark">
       <div class="container">
         <p class="text-center mb-1">
-          <a href="#">Vrátit se na začátek</a>
+          <a style="color: #B0E0E6" href="#">Vrátit se na začátek</a>
         </p>
       </div>
     </footer>
