--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </div>
   </header>
 
-      <main>
+      <main style="margin-top: 63px;">
         <section class="text-center container">
           <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
